# simple-image-processer

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
doc/: plan.md  requirements.md  simple-image-processer.md  technique.md
src/: CMakeLists.txt  main.cpp
src/App/: CMakeLists.txt  appprocess.cpp  appprocess.h
src/Common/: CMakeLists.txt  Image.cpp  Image.h  ImageUtil.cpp  ImageUtil.h  Mat.h  MathUtil.cpp  MathUtil.h
src/Model/: CMakeLists.txt  ImageModel.cpp  ImageModel.h  ImageUtil.cpp  ImageUtil.h  Mat.h
src/View/: AdapThresDialog.cpp  AdapThresDialog.h  AdapThresDialog.ui  BlurDialog.cpp  BlurDialog.h  BlurDialog.ui  CMakeLists.txt  HistogramDialog.cpp  HistogramDialog.h  HistogramDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ViewModel/: CMakeLists.txt  ImageViewModel.cpp  ImageViewModel.h
src/Window/: CMakeLists.txt  windowprocess.cpp  windowprocess.h
test/: CMakeLists.txt
test/Common/: CMakeLists.txt  CommonTest.cpp
test/Model/: CMakeLists.txt  ImageUtilTest.cpp
test/View/: CMakeLists.txt  MainWindowTest.cpp
test/Window/: CMakeLists.txt  WindowTest.cpp
